<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="Please_connect_your_device">Please connect your device</string>
    <string name="about_us_app_version">App Version:%s</string>
    <string name="about_us_title">About</string>
    <string name="about_us_url">Privacy statement</string>
    <string name="activity_feedback">Feedback</string>
    <string name="activity_title_resetpass">Change Password</string>
    <string name="activity_user_exist">Email Address is already exist!</string>
    <string name="agree">Agree</string>
    <string name="app_into_the_background1">Press again and %1$s into the background</string>
    <string name="apple_health">Apple Health</string>
    <string name="birthday">Birthday</string>
    <string name="birthday_title">Select Birthday</string>
    <string name="change_password_maxlength">New password length should not be more than 18 characters</string>
    <string name="change_password_minlength">New password length should not be less than 6 characters</string>
    <string name="check_service">Check the message push service</string>
    <string name="common_cormfir">Confirm</string>
    <string name="create_profile_title">Create your profile</string>
    <string name="current_kg">current %1$skg</string>
    <string name="current_lbs">current %1$slbs</string>
    <string name="dev_model_blelog">Logs of Developer Mode</string>
    <string name="device_module__start">Start</string>
    <string name="device_module_activity_come_phone">Call</string>
    <string name="device_module_activity_heart_guide">Heart rate guide</string>
    <string name="device_module_activity_msg_push">Message Notification</string>
    <string name="device_module_activity_personcenter_weight">Body weight</string>
    <string name="device_module_activity_shake_mode">Vibration mode</string>
    <string name="device_module_activity_shake_mode_select_error">Please re-select the mode</string>
    <string name="device_module_activity_shake_num">Cycles</string>
    <string name="device_module_activity_times">%d times</string>
    <string name="device_module_activity_update_over">upgrade over</string>
    <string name="device_module_add_clock">Add Clock</string>
    <string name="device_module_add_others_app">Add others Application notification</string>
    <string name="device_module_add_schedule">Add Schedule</string>
    <string name="device_module_add_sport_title">Added</string>
    <string name="device_module_app_background_content">To ensure the connection and message push stability,please allow %s to run in the background.</string>
    <string name="device_module_app_background_ok">Instructions</string>
    <string name="device_module_app_background_title">Note</string>
    <string name="device_module_app_name">device_module</string>
    <string name="device_module_auto_sleep_item_tip">If turn off, you can not monitor your sleep.</string>
    <string name="device_module_back_light">Backlight</string>
    <string name="device_module_black">Black</string>
    <string name="device_module_ble_connect_again">Connect again</string>
    <string name="device_module_ble_connect_statue_1">Connected</string>
    <string name="device_module_ble_connect_statue_2">Disconnected</string>
    <string name="device_module_ble_search_again">Search again</string>
    <string name="device_module_ble_search_title">No Search</string>
    <string name="device_module_ble_search_title_1">Please try to restart bluetooth or your band</string>
    <string name="device_module_ble_search_title_2">Connect Failed</string>
    <string name="device_module_call_id_notify">Call ID notify</string>
    <string name="device_module_camera_no_open">The camera permissions are not turned on</string>
    <string name="device_module_camera_picture">5 seconds for each photo</string>
    <string name="device_module_cannot_set">The weather is not available, you cannot switch units now</string>
    <string name="device_module_clock">Clock</string>
    <string name="device_module_common_cormfir_no">no</string>
    <string name="device_module_common_cormfir_yes">Yes</string>
    <string name="device_module_connect">connect</string>
    <string name="device_module_connect_fail_tip">1.Please try to restart bluetooth or your band.\102.Make sure the device is near your phone.\103.Make sure the device is not connected to another cell phone.</string>
    <string name="device_module_connecting">Connecting…</string>
    <string name="device_module_date_format_day">Day/Month</string>
    <string name="device_module_date_format_month">Month/Day</string>
    <string name="device_module_delete">Delete</string>
    <string name="device_module_delete_clock">Delete Clock</string>
    <string name="device_module_delete_schedule">Delete Schedule</string>
    <string name="device_module_device_setting_tip_dialog_message">Please unbind if you want bind another.</string>
    <string name="device_module_device_setting_tip_dialog_title">- Tip -</string>
    <string name="device_module_device_setting_unbind_no">No</string>
    <string name="device_module_device_setting_unbind_title">- Unbind -</string>
    <string name="device_module_dfu_action_abort">stop</string>
    <string name="device_module_dfu_battery_low">Please keep 50% of the battery and then upgrade the firmware</string>
    <string name="device_module_dfu_channel_description">Shows DFU progress.</string>
    <string name="device_module_dfu_channel_name">DFU</string>
    <string name="device_module_dfu_command_write_fail">DFU command write failure</string>
    <string name="device_module_dfu_confirmation_dialog_exit_message">Are you sure to exit?</string>
    <string name="device_module_dfu_confirmation_dialog_title">app upgrade</string>
    <string name="device_module_dfu_prower_low">Please keep 50% of the battery and then upgrade the firmware</string>
    <string name="device_module_dfu_status_aborted">Aborted</string>
    <string name="device_module_lunch_break">Lunch break</string>
    <string name="device_module_lunch_break_item_tip">Do not remind during 12:00-14:00</string>
    <string name="device_module_repeat">Repeat</string>
    <string name="device_module_sedentary_reminder">Sedentary Reminder</string>
    <string name="device_module_time_period_setting">Time period Setting</string>
    <string name="dfu_desc">Only for those who failed to upgrade the bracelet</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="email_address">Email Address</string>
    <string name="forgot_password">Forgot password？</string>
    <string name="login_if_you_agree_to">Login if you agree to</string>
    <string name="login_welcome">Welcome</string>
    <string name="my_module_background_permission">Background settings</string>
    <string name="my_module_upload_ble">Upload BLE Log</string>
    <string name="new_password_hint">6 to 18 characters</string>
    <string name="old_password">Old Password</string>
    <string name="old_password_hint">Please note case sensitive</string>
    <string name="pass_word_hint">New Password</string>
    <string name="password">Password</string>
    <string name="run_km">(km)</string>
    <string name="run_km_h">(km/h)</string>
    <string name="run_min_km">(min/km)</string>
    <string name="setting_app_update">App Update</string>
    <string name="setting_firmware_helper">DFU Helper</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="signup_activiey_title">Sign up</string>
    <string name="sport_module_Distance">Distance</string>
    <string name="sport_module_Pace">Pace</string>
    <string name="sport_module_Speed">Speed</string>
    <string name="sport_module_chart">Sections</string>
    <string name="sport_module_ok">OK</string>
    <string name="sport_module_s2_bt_config_again">configure</string>
    <string name="sport_module_s2_go2_config_fiald">Wifi configuration failed</string>
    <string name="sport_module_weight_tv_action">Please confirm whether there is the following error operation:</string>
    <string name="sport_module_weight_tv_action1">Body fat scales are not configured (WiFi lights do not flicker) to match.</string>
    <string name="sport_module_weight_tv_action2">WiFi password input error</string>
    <string name="sport_module_weight_tv_action3">Routers are too far away to affect the use of signals</string>
    <string name="sport_module_weight_tv_action4">Use 5G band router, or router set up protection.</string>
    <string name="temperature_switch">Temperature switch</string>
    <string name="the_privacy_policy">The privacy policy of %s</string>
    <string name="unit_setting">Unit of measurement</string>
</resources>