<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@color/device_module_common_background_1" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.iwown.device_module.common.view.SwitchItme android:id="@+id/remind_switch" android:background="@color/device_module_common_background" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" app:device_module_title_switch_item="@string/device_module_sedentary_reminder" app:device_module_content_switch_item="@string/device_module_auto_sleep_item_tip" app:device_module_is_content_visible="false"/>
    <com.iwown.device_module.common.view.ItemView android:id="@+id/time_period" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="45dp" app:device_module_labelText="@string/device_module_time_period_setting" app:device_module_is_content_visible="true"/>
    <com.iwown.device_module.common.view.TimeIntervalView android:id="@+id/time_interval_picker" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" app:device_module_use_for="2"/>
    <com.iwown.device_module.common.view.ItemView android:id="@+id/repeat" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="45dp" app:device_module_labelText="@string/device_module_repeat" app:device_module_isUnderLine="false" app:device_module_is_content_visible="true"/>
    <com.iwown.device_module.common.view.SwitchItme android:id="@+id/lunch_break" android:background="@color/device_module_common_background" android:paddingTop="@dimen/device_module_dip_size_8" android:paddingBottom="@dimen/device_module_dip_size_8" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="30dp" app:device_module_title_switch_item="@string/device_module_lunch_break" app:device_module_content_switch_item="@string/device_module_lunch_break_item_tip" app:device_module_show_divide_line="false"/>
</LinearLayout>
