<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:id="@+id/content_area" android:background="@color/dark_theme_background_color" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="17dp" android:textColor="@android:color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="20dp" android:text="@string/old_password"/>
    <EditText android:textColor="@android:color/white" android:textColorHint="@color/dark_theme_hint_color" android:id="@+id/old_password" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="18dp" android:layout_marginTop="10dp" android:hint="@string/old_password_hint"/>
    <TextView android:textSize="17dp" android:textColor="@android:color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="40dp" android:text="@string/pass_word_hint"/>
    <EditText android:textColor="@android:color/white" android:textColorHint="@color/dark_theme_hint_color" android:id="@+id/new_password" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="18dp" android:layout_marginTop="10dp" android:hint="@string/new_password_hint"/>
    <com.iwown.my_module.widget.SAutoBgButton android:textSize="20dp" android:textColor="@android:color/white" android:layout_gravity="center" android:id="@+id/reset_password" android:background="@color/title_bar_color" android:paddingLeft="44dp" android:paddingTop="10dp" android:paddingRight="44dp" android:paddingBottom="10dp" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="50dp" android:text="@string/sport_module_ok"/>
</LinearLayout>
