<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:textSize="31dp" android:textStyle="bold" android:textColor="@color/white" android:paddingLeft="20dp" android:paddingTop="20dp" android:paddingRight="20dp" android:paddingBottom="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sport_module_chart"/>
    <android.support.constraint.ConstraintLayout android:id="@+id/total_chart_cl" android:paddingLeft="20dp" android:paddingRight="20dp" android:layout_width="match_parent" android:layout_height="match_parent">
        <TextView android:id="@+id/tv_distance_tag" android:layout_marginTop="@dimen/dip_size_10" android:text="@string/sport_module_Distance" app:layout_constraintHorizontal_chainStyle="1" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toLeftOf="@+id/tv_pace_tag" app:layout_constraintTop_toTopOf="0" style="@style/sport_run_data_text_tag"/>
        <TextView android:textColor="@color/sport_module_FFB5B7BD" android:id="@+id/tv_distance_unit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/run_km" app:layout_constraintEnd_toEndOf="@+id/tv_distance_tag" app:layout_constraintStart_toStartOf="@+id/tv_distance_tag" app:layout_constraintTop_toBottomOf="@+id/tv_distance_tag"/>
        <TextView android:textColor="@color/sport_module_FFB5B7BD" android:id="@+id/tv_pace_unit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/run_min_km" android:includeFontPadding="false" app:layout_constraintBottom_toBottomOf="@+id/tv_distance_unit" app:layout_constraintEnd_toEndOf="@+id/tv_pace_tag" app:layout_constraintStart_toStartOf="@+id/tv_pace_tag"/>
        <TextView android:id="@+id/tv_pace_tag" android:text="@string/sport_module_Pace" app:layout_constraintLeft_toRightOf="@+id/tv_distance_tag" app:layout_constraintRight_toLeftOf="@+id/tv_speed_tag" app:layout_constraintTop_toTopOf="@+id/tv_distance_tag" style="@style/sport_run_data_text_tag"/>
        <TextView android:ellipsize="end" android:id="@+id/tv_speed_tag" android:text="@string/sport_module_Speed" android:lines="1" app:layout_constraintEnd_toEndOf="0" app:layout_constraintLeft_toRightOf="@+id/tv_pace_tag" app:layout_constraintTop_toTopOf="@+id/tv_distance_tag" style="@style/sport_run_data_text_tag"/>
        <TextView android:textColor="@color/sport_module_FFB5B7BD" android:id="@+id/tv_speed_unit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/run_km_h" app:layout_constraintEnd_toEndOf="@+id/tv_speed_tag" app:layout_constraintStart_toStartOf="@+id/tv_speed_tag" app:layout_constraintTop_toTopOf="@+id/tv_distance_unit"/>
        <android.support.v7.widget.RecyclerView android:id="@+id/rlv_datas" android:background="@android:color/transparent" android:paddingBottom="15dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dip_size_10" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_distance_unit"/>
    </android.support.constraint.ConstraintLayout>
</LinearLayout>
