<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/login_main" android:background="@mipmap/login_bg" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.iwown.my_module.widget.ErrorTipTextView android:id="@+id/error_tip_tv" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" app:stop_time="2000"/>
    <RelativeLayout android:paddingLeft="30dp" android:paddingRight="30dp" android:layout_width="match_parent" android:layout_height="match_parent">
        <TextView android:textSize="42sp" android:textStyle="bold" android:textColor="@android:color/white" android:id="@+id/welcome" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="82dp" android:text="@string/login_welcome"/>
        <RelativeLayout android:id="@+id/email_rl" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="40dp" android:layout_below="@+id/welcome">
            <EditText android:textSize="17dp" android:textColor="#ffffff" android:textColorHint="@color/login_hint_color" android:id="@+id/email_edt" android:background="@null" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/email_address"/>
            <View android:id="@+id/addr_underline" android:background="@color/login_hint_color" android:layout_width="match_parent" android:layout_height="2dp" android:layout_marginTop="5dp" android:layout_below="@+id/email_edt"/>
        </RelativeLayout>
        <RelativeLayout android:id="@+id/pwd_rl" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:layout_below="@+id/email_rl">
            <EditText android:textSize="17dp" android:textColor="#ffffff" android:textColorHint="@color/login_hint_color" android:id="@+id/pwd_edt" android:background="@null" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/password"/>
            <View android:id="@+id/pwd_underline" android:background="@color/login_hint_color" android:layout_width="match_parent" android:layout_height="2dp" android:layout_marginTop="5dp" android:layout_below="@+id/pwd_edt"/>
            <ImageView android:id="@+id/login_img_disclose_pwd" android:background="@mipmap/see2" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignRight="@+id/pwd_underline" android:layout_alignBottom="@+id/pwd_edt"/>
        </RelativeLayout>
        <TextView android:textSize="15dp" android:textColor="@color/login_hint_color" android:id="@+id/forget_pwd_tv" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/forgot_password" android:layout_below="@+id/pwd_rl" android:layout_alignParentRight="true"/>
        <TextView android:textSize="20dp" android:textColor="@android:color/white" android:gravity="center" android:id="@+id/login_btn" android:background="@drawable/login_btn_bg_selector" android:clickable="true" android:layout_width="218dp" android:layout_height="42dp" android:layout_marginTop="66dp" android:text="@string/sign_in" android:layout_below="@+id/pwd_rl" android:layout_centerHorizontal="true"/>
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="16dp" android:layout_below="@+id/login_btn" android:layout_centerHorizontal="true">
            <LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:textSize="15dp" android:textColor="@color/login_hint_color" android:id="@+id/no_account_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/don_t_have_an_account"/>
                <TextView android:textSize="15dp" android:textColor="@android:color/white" android:gravity="left" android:id="@+id/to_sign_up_btn" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:text="@string/signup_activiey_title"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <TextView android:textColor="@color/login_hint_color" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="35dp" android:text="@string/login_if_you_agree_to" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"/>
    <TextView android:textColor="@android:color/white" android:id="@+id/privacy_btn" android:visibility="gone" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="15dp" android:text="@string/the_privacy_policy" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"/>
</RelativeLayout>
