<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:background="@color/s2_wifi_base_color" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:id="@+id/iv_error" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/s2config_error" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.15"/>
    <TextView android:textSize="@dimen/textsize20" android:textColor="@color/white" android:id="@+id/tv_error" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sport_module_s2_go2_config_fiald" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/iv_error"/>
    <TextView android:textColor="@color/base_text_color_black_0" android:id="@+id/tv_action" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dip_size_15" android:text="@string/sport_module_weight_tv_action" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_error"/>
    <TextView android:textColor="@color/base_text_color_black_0" android:id="@+id/tv_action1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dip_size_20" android:text="@string/sport_module_weight_tv_action1" android:drawableLeft="@drawable/s2_wifi_circle_orange" android:drawablePadding="@dimen/dip_size_5" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_action"/>
    <TextView android:textColor="@color/base_text_color_black_0" android:id="@+id/tv_action2" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dip_size_15" android:text="@string/sport_module_weight_tv_action2" android:drawableLeft="@drawable/s2_wifi_circle_orange" android:drawablePadding="@dimen/dip_size_5" app:layout_constraintEnd_toEndOf="@+id/tv_action1" app:layout_constraintStart_toStartOf="@+id/tv_action1" app:layout_constraintTop_toBottomOf="@+id/tv_action1"/>
    <TextView android:textColor="@color/base_text_color_black_0" android:id="@+id/tv_action3" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dip_size_15" android:text="@string/sport_module_weight_tv_action3" android:drawableLeft="@drawable/s2_wifi_circle_orange" android:drawablePadding="@dimen/dip_size_5" app:layout_constraintEnd_toEndOf="@+id/tv_action1" app:layout_constraintStart_toStartOf="@+id/tv_action1" app:layout_constraintTop_toBottomOf="@+id/tv_action2"/>
    <TextView android:textColor="@color/base_text_color_black_0" android:id="@+id/tv_action4" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dip_size_15" android:text="@string/sport_module_weight_tv_action4" android:drawableLeft="@drawable/s2_wifi_circle_orange" android:drawablePadding="@dimen/dip_size_5" app:layout_constraintEnd_toEndOf="@+id/tv_action1" app:layout_constraintStart_toStartOf="@+id/tv_action1" app:layout_constraintTop_toBottomOf="@+id/tv_action3"/>
    <Button android:textColor="@color/white" android:id="@+id/bt_agin" android:background="@drawable/sport_module_bt_wifi_shape_color1" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/textsize26" android:layout_marginRight="@dimen/textsize26" android:text="@string/sport_module_s2_bt_config_again" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_action4"/>
</android.support.constraint.ConstraintLayout>
